:lipstick: use svh over vh everywhere in the app to avoid scrollbar when browser controls change size

--- a/web/src/styles/page styles/SignInError.module.css
+++ b/web/src/styles/page styles/SignInError.module.css
@@ -5,12 +5,12 @@
     height: 100%;
     background-color: #03045e;
     width: 100vw;
-    height: 100vh;
+    height: 100svh;
 
   }
-  
+
   .topsection {
-    background-color: #03045e; 
+    background-color: #03045e;
     color: white;
     display: flex;
     text-align: center;
@@ -18,7 +18,7 @@
     justify-content: center;
     height: 55%;
     flex-direction: column;
-    
+
   }
 
   .h1{
@@ -37,7 +37,7 @@
   }
 
   .bottomsection {
-    background-color: #e1ebff; 
+    background-color: #e1ebff;
     display: flex;
     flex-direction: column;
     align-items: center;
