--- a/web/src/styles/page styles/form.css
+++ b/web/src/styles/page styles/form.css
@@ -23,7 +23,7 @@
 }
 
 .background-form {
-    min-height: 100vh;
+    min-height: 100svh;
     background-color: #03045e;
 }
 
